--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
                   </table>
 
 </td>
+</tr>
+</table>
+<hr size="5">
+<h2><a href="my contacts.html"> My contacts</a></h2>
+
+
+
+
+       </body>
+   </html>
 
 
 
