--- a/my contacts.html
+++ b/my contacts.html
@@ -2,10 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Contact me</title>
   </head>
   <body>
-<p>my contacts</p>
+<h1>My contacts</h1>
+<p>my email:</p>
+<p>my contact number:</p>
+<p>my adress:</p>
+<hr size="5">
+<form  action="mailto:adithyads719@gmail.com" method="post" enctype="text/plain">
+  <label>Your name:</label>
+  <input type="text" name="your name" value=""><br>
+
+  <label>Email:</label>
+  <input type="email" name="your email" value=""><br>
+
+  <label>Your message:</label><br>
+  <textarea name="your message" rows="10" cols="30"></textarea><br>
+  <input type="submit" name="">
+
+</form>
 
   </body>
 </html>
